// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`chassis overlay snapshots > asr903 overlay summary is stable 1`] = `
{
  "profileId": "Cisco_ASR_903_Router",
  "views": {
    "front": {
      "Fan": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "Power": {
        "hotspots": 2,
        "overlay": "rendered",
        "withAsset": 2,
      },
      "slot": {
        "hotspots": 2,
        "overlay": "rendered",
        "withAsset": 2,
      },
      "subslot": {
        "hotspots": 6,
        "overlay": "rendered",
        "withAsset": 6,
      },
    },
  },
}
`;

exports[`chassis overlay snapshots > asr920 overlay summary is stable 1`] = `
{
  "profileId": "Cisco_ASR_920_20SZ_M_Router",
  "views": {
    "front": {
      "mgmt": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "psu": {
        "hotspots": 2,
        "overlay": "rendered",
        "withAsset": 2,
      },
      "sfp": {
        "hotspots": 20,
        "overlay": "rendered",
        "withAsset": 20,
      },
      "uplink": {
        "hotspots": 4,
        "overlay": "rendered",
        "withAsset": 4,
      },
    },
  },
}
`;

exports[`chassis overlay snapshots > asr920-12cz overlay summary is stable 1`] = `
{
  "profileId": "Cisco_ASR_920_12CZ_Router",
  "views": {
    "front": {
      "fan": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "psu": {
        "hotspots": 2,
        "overlay": "rendered",
        "withAsset": 2,
      },
      "rj45": {
        "hotspots": 8,
        "overlay": "rendered",
        "withAsset": 8,
      },
      "sfp": {
        "hotspots": 4,
        "overlay": "rendered",
        "withAsset": 4,
      },
      "uplink": {
        "hotspots": 2,
        "overlay": "rendered",
        "withAsset": 2,
      },
    },
  },
}
`;

exports[`chassis overlay snapshots > asr920-12sz overlay summary is stable 1`] = `
{
  "profileId": "Cisco_ASR_920_12SZ_Router",
  "views": {
    "front": {
      "fan": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "psu": {
        "hotspots": 2,
        "overlay": "rendered",
        "withAsset": 2,
      },
      "sfp": {
        "hotspots": 12,
        "overlay": "rendered",
        "withAsset": 12,
      },
    },
  },
}
`;

exports[`chassis overlay snapshots > asr920-12sz-im overlay summary is stable 1`] = `
{
  "profileId": "Cisco_ASR_920_12SZ_IM_Router",
  "views": {
    "front": {
      "fan": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "im": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "psu": {
        "hotspots": 2,
        "overlay": "rendered",
        "withAsset": 2,
      },
      "rj45": {
        "hotspots": 8,
        "overlay": "rendered",
        "withAsset": 8,
      },
      "sfp": {
        "hotspots": 4,
        "overlay": "rendered",
        "withAsset": 4,
      },
      "uplink": {
        "hotspots": 4,
        "overlay": "rendered",
        "withAsset": 4,
      },
    },
  },
}
`;

exports[`chassis overlay snapshots > asr920-24sz overlay summary is stable 1`] = `
{
  "profileId": "Cisco_ASR_920_24SZM_Router",
  "views": {
    "front": {
      "fan": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "psu": {
        "hotspots": 2,
        "overlay": "rendered",
        "withAsset": 2,
      },
      "sfp": {
        "hotspots": 24,
        "overlay": "rendered",
        "withAsset": 24,
      },
      "uplink": {
        "hotspots": 4,
        "overlay": "rendered",
        "withAsset": 4,
      },
    },
  },
}
`;

exports[`chassis overlay snapshots > asr9006 overlay summary is stable 1`] = `
{
  "profileId": "Cisco_ASR_9006_Router",
  "views": {
    "front": {
      "0": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "1": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "2": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "3": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "FT0": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "FT1": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "PS0": {
        "hotspots": 3,
        "overlay": "rendered",
        "withAsset": 3,
      },
      "RSP0": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "RSP1": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "gige": {
        "hotspots": 20,
        "overlay": "rendered",
        "withAsset": 20,
      },
    },
  },
}
`;

exports[`chassis overlay snapshots > asr9010 overlay summary is stable 1`] = `
{
  "profileId": "Cisco_ASR_9010_Router",
  "views": {
    "front": {
      "0": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "1": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "2": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "3": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "4": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "5": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "6": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "7": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "9010a": {
        "hotspots": 4,
        "overlay": "rendered",
        "withAsset": 4,
      },
      "9010b": {
        "hotspots": 8,
        "overlay": "rendered",
        "withAsset": 8,
      },
      "9010c": {
        "hotspots": 22,
        "overlay": "rendered",
        "withAsset": 22,
      },
      "FT0": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "FT1": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "PS0": {
        "hotspots": 3,
        "overlay": "rendered",
        "withAsset": 3,
      },
      "PS1": {
        "hotspots": 3,
        "overlay": "rendered",
        "withAsset": 3,
      },
      "RSP0": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "RSP1": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
    },
  },
}
`;

exports[`chassis overlay snapshots > asr9901 overlay summary is stable 1`] = `
{
  "profileId": "asr9901",
  "views": {
    "front": {
      "hs-front-0": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-1": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
    },
  },
}
`;

exports[`chassis overlay snapshots > asr9902 overlay summary is stable 1`] = `
{
  "profileId": "asr9902",
  "views": {
    "front": {
      "hs-front-0": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-1": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-2": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
    },
  },
}
`;

exports[`chassis overlay snapshots > asr9903 overlay summary is stable 1`] = `
{
  "profileId": "asr9903",
  "views": {
    "front": {
      "hs-front-0": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-1": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-2": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
    },
  },
}
`;

exports[`chassis overlay snapshots > covers every shipped profile directory 1`] = `
[
  "asr9006",
  "asr9010",
  "asr903",
  "asr920",
  "asr920-12cz",
  "asr920-12sz",
  "asr920-12sz-im",
  "asr920-24sz",
  "asr9901",
  "asr9902",
  "asr9903",
  "ncs540",
  "ncs540-12z16g",
  "ncs540-12z20g",
  "ncs540-16z4",
  "ncs540-28z4c",
  "ncs540-acc-sys",
  "ncs540-fh-agg",
  "ncs540-fh-csr",
  "ncs540x-4z14g2q",
  "ncs5501",
  "ncs5502",
  "ncs5504",
  "ncs5508",
  "ncs5516",
  "ncs55a1",
  "ncs55a1-24h",
  "ncs55a1-24q6h",
  "ncs55a1-48q6h",
  "ncs560",
  "ncs560-4",
  "ncs560-enh",
]
`;

exports[`chassis overlay snapshots > ncs55a1 overlay summary is stable 1`] = `
{
  "profileId": "Cisco_NCS55A1",
  "views": {
    "front": {
      "0": {
        "hotspots": 5,
        "overlay": "rendered",
        "withAsset": 5,
      },
      "1": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "784": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "8384513": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "qsfp28": {
        "hotspots": 36,
        "overlay": "rendered",
        "withAsset": 36,
      },
    },
    "rear": {
      "0": {
        "hotspots": 5,
        "overlay": "rendered",
        "withAsset": 5,
      },
      "8384513": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
    },
  },
}
`;

exports[`chassis overlay snapshots > ncs55a1-24h overlay summary is stable 1`] = `
{
  "profileId": "Cisco_NCS_55A1-24H",
  "views": {
    "front": {
      "chassis": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "port": {
        "hotspots": 56,
        "overlay": "rendered",
        "withAsset": 56,
      },
      "rp0": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
    },
    "rear": {
      "chassis": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "ft0": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "ft1": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "pm0": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "pm1": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
    },
  },
}
`;

exports[`chassis overlay snapshots > ncs55a1-24q6h overlay summary is stable 1`] = `
{
  "profileId": "Cisco_NCS_55A1-24Q6H-S",
  "views": {
    "front": {
      "chassis": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "port": {
        "hotspots": 54,
        "overlay": "rendered",
        "withAsset": 54,
      },
      "rp0": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
    },
    "rear": {
      "chassis": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "ft0": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "ft1": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "pm0": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "pm1": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
    },
  },
}
`;

exports[`chassis overlay snapshots > ncs55a1-48q6h overlay summary is stable 1`] = `
{
  "profileId": "Cisco_NCS_55A1-48Q6H",
  "views": {
    "front": {
      "chassis": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "port": {
        "hotspots": 54,
        "overlay": "rendered",
        "withAsset": 54,
      },
      "rp0": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
    },
    "rear": {
      "chassis": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "ft0": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "ft1": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "pm0": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "pm1": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
    },
  },
}
`;

exports[`chassis overlay snapshots > ncs540 overlay summary is stable 1`] = `
{
  "profileId": "Cisco_NCS540",
  "views": {
    "front": {
      "bay": {
        "hotspots": 28,
        "overlay": "rendered",
        "withAsset": 28,
      },
      "chassis": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "fan": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "power": {
        "hotspots": 2,
        "overlay": "rendered",
        "withAsset": 2,
      },
      "rp": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
    },
  },
}
`;

exports[`chassis overlay snapshots > ncs540-12z16g overlay summary is stable 1`] = `
{
  "profileId": "Cisco_NCS_540X-12Z16G-SYS-D",
  "views": {
    "front": {
      "port": {
        "hotspots": 28,
        "overlay": "rendered",
        "withAsset": 28,
      },
      "power": {
        "hotspots": 2,
        "overlay": "rendered",
        "withAsset": 2,
      },
      "rp": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
    },
  },
}
`;

exports[`chassis overlay snapshots > ncs540-12z20g overlay summary is stable 1`] = `
{
  "profileId": "Cisco_NCS_540-12Z20G-SYS-D",
  "views": {
    "front": {
      "fan": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "power": {
        "hotspots": 2,
        "overlay": "rendered",
        "withAsset": 2,
      },
      "rp": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
    },
  },
}
`;

exports[`chassis overlay snapshots > ncs540-16z4 overlay summary is stable 1`] = `
{
  "profileId": "Cisco_NCS_540X-16Z4G8Q2C-D",
  "views": {
    "front": {
      "fan": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "port": {
        "hotspots": 30,
        "overlay": "rendered",
        "withAsset": 30,
      },
      "power": {
        "hotspots": 2,
        "overlay": "rendered",
        "withAsset": 2,
      },
      "rp": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
    },
  },
}
`;

exports[`chassis overlay snapshots > ncs540-28z4c overlay summary is stable 1`] = `
{
  "profileId": "Cisco_NCS_540-28Z4C-SYS-D",
  "views": {
    "front": {
      "power": {
        "hotspots": 2,
        "overlay": "rendered",
        "withAsset": 2,
      },
      "rp": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
    },
  },
}
`;

exports[`chassis overlay snapshots > ncs540-acc-sys overlay summary is stable 1`] = `
{
  "profileId": "Cisco_NCS_540-ACC-SYS",
  "views": {
    "front": {
      "chassis": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "port": {
        "hotspots": 32,
        "overlay": "rendered",
        "withAsset": 32,
      },
      "psu0": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "psu1": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "sync": {
        "hotspots": 4,
        "overlay": "rendered",
        "withAsset": 4,
      },
    },
  },
}
`;

exports[`chassis overlay snapshots > ncs540-fh-agg overlay summary is stable 1`] = `
{
  "profileId": "Cisco_NCS_540-FH-AGG-SYS",
  "views": {
    "front": {
      "fan": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "power": {
        "hotspots": 2,
        "overlay": "rendered",
        "withAsset": 2,
      },
      "rp": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
    },
  },
}
`;

exports[`chassis overlay snapshots > ncs540-fh-csr overlay summary is stable 1`] = `
{
  "profileId": "Cisco_NCS_540-FH-CSR-SYS",
  "views": {
    "front": {
      "fan": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "power": {
        "hotspots": 2,
        "overlay": "rendered",
        "withAsset": 2,
      },
      "rp": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
    },
  },
}
`;

exports[`chassis overlay snapshots > ncs540x-4z14g2q overlay summary is stable 1`] = `
{
  "profileId": "Cisco_NCS_540X-4Z14G2Q-D",
  "views": {
    "front": {
      "power": {
        "hotspots": 2,
        "overlay": "rendered",
        "withAsset": 2,
      },
      "rp": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
    },
  },
}
`;

exports[`chassis overlay snapshots > ncs560 overlay summary is stable 1`] = `
{
  "profileId": "Cisco_NCS560",
  "views": {
    "front": {
      "bay": {
        "hotspots": 42,
        "overlay": "rendered",
        "withAsset": 42,
      },
      "chassis": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "fan": {
        "hotspots": 3,
        "overlay": "rendered",
        "withAsset": 3,
      },
      "linecard": {
        "hotspots": 3,
        "overlay": "rendered",
        "withAsset": 3,
      },
      "port": {
        "hotspots": 2,
        "overlay": "rendered",
        "withAsset": 2,
      },
      "power": {
        "hotspots": 2,
        "overlay": "rendered",
        "withAsset": 2,
      },
      "rp": {
        "hotspots": 2,
        "overlay": "rendered",
        "withAsset": 2,
      },
    },
  },
}
`;

exports[`chassis overlay snapshots > ncs560-4 overlay summary is stable 1`] = `
{
  "profileId": "ncs560-4",
  "views": {
    "front": {
      "hs-front-0": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-1": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-10": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-11": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-12": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-13": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-2": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-3": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-4": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-5": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-6": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-7": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-8": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-9": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
    },
  },
}
`;

exports[`chassis overlay snapshots > ncs560-enh overlay summary is stable 1`] = `
{
  "profileId": "ncs560-enh",
  "views": {
    "front": {
      "hs-front-0": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-1": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-10": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-11": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-12": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-13": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-14": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-15": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-16": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-17": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-18": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-19": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-2": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-20": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-21": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-3": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-4": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-5": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-6": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-7": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-8": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-9": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
    },
  },
}
`;

exports[`chassis overlay snapshots > ncs5501 overlay summary is stable 1`] = `
{
  "profileId": "Cisco_NCS_5501",
  "views": {
    "front": {
      "chassis": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "rp0": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
    },
    "rear": {
      "chassis": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "ft0": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "ft1": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "pm0": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "pm1": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
    },
  },
}
`;

exports[`chassis overlay snapshots > ncs5502 overlay summary is stable 1`] = `
{
  "profileId": "Cisco_NCS_5502",
  "views": {
    "front": {
      "chassis": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "rp0": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
    },
    "rear": {
      "chassis": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "ft0": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "ft1": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "pm0": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "pm1": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
    },
  },
}
`;

exports[`chassis overlay snapshots > ncs5504 overlay summary is stable 1`] = `
{
  "profileId": "ncs5504",
  "views": {
    "front": {
      "hs-front-0": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-1": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-2": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-3": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-4": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-5": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-6": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-7": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-8": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-front-9": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
    },
  },
}
`;

exports[`chassis overlay snapshots > ncs5508 overlay summary is stable 1`] = `
{
  "profileId": "Cisco_NCS_5508",
  "views": {
    "front": {
      "chassis": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "lc0": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "lc1": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "lc2": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "lc3": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "lc4": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "lc5": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "lc6": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "lc7": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "pm0": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "pm1": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "pm2": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "pm3": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "rp0": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "rp1": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
    },
    "rear": {
      "chassis": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "fc0": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "fc1": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "fc2": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "fc3": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "fc4": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "ft0": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "ft1": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "ft2": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "sc0": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
      "sc1": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 1,
      },
    },
  },
}
`;

exports[`chassis overlay snapshots > ncs5516 overlay summary is stable 1`] = `
{
  "profileId": "ncs5516",
  "views": {
    "front": {
      "hs-rear-0": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-rear-1": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-rear-10": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-rear-11": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-rear-12": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-rear-13": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-rear-14": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-rear-15": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-rear-16": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-rear-17": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-rear-18": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-rear-19": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-rear-2": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-rear-20": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-rear-21": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-rear-22": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-rear-23": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-rear-24": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-rear-25": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-rear-26": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-rear-27": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-rear-3": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-rear-4": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-rear-5": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-rear-6": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-rear-7": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-rear-8": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
      "hs-rear-9": {
        "hotspots": 1,
        "overlay": "rendered",
        "withAsset": 0,
      },
    },
  },
}
`;
